fix: program package condition

--- a/src/translations/locales/en-us.json
+++ b/src/translations/locales/en-us.json
@@ -1058,6 +1058,13 @@
   "craft.*.titleStyle": "Title Style",
   "craft.*.variant": "Component Style",
   "craft.*.width": "width",
+  "craft.AIBotSettings.addQuestion": "新增問題",
+  "craft.AIBotSettings.assistantQuestions": "使用者問答",
+  "craft.AIBotSettings.assistantQuestionsPlaceholder": "What do you want to ask?",
+  "craft.AIBotSettings.setting": "基本設定",
+  "craft.AIBotSettings.style": "樣式",
+  "craft.AIBotSettings.systemPrompt": "系統提示詞",
+  "craft.AIBotSettings.systemPromptPlaceholder": "You are an expert of...",
   "craft.ActivityCollectionSettings.activitySectionId": "Activity Section ID",
   "craft.BackgroundStyleInput.background": "Background",
   "craft.BackgroundStyleInput.image": "Image",
@@ -1532,7 +1539,6 @@
   "member.label.timetable": "時間表",
   "member.label.線上課程服務約款": "線上課程服務約款",
   "member.text.markAsRejection": "Mark As Rejection",
-  "member.text.memberSelect": "請輸入帳號或 Email",
   "member.text.removeMember": "The student status will be changed to Rejected and removed from the \"In Development\" list.",
   "member.ui.memberReject": "Member Rejected",
   "member.ui.switchCalendar": "Switch Calendar Mode",
@@ -1817,6 +1823,9 @@
   "page.CouponCollectionBlock.showMore": "顯示更多",
   "page.CouponPlanCollectionAdminPage.searchPlaceholder": "搜尋折扣代碼或折價券名稱",
   "page.GiftPlanCollectionAdminPage.giftPlan": "贈品方案",
+  "page.MemberAdminPage.notEnoughCoins": "Coins are not enough!",
+  "page.MemberAdminPage.notEnoughCoinsDescription": "Needs {futureCoins} coins. You need {insufficientCoins} coins more.",
+  "page.MemberAdminPage.remainingCoins": "Still have {remainingCoins} coins.",
   "page.ProgramPackageProcessBlock.allProgramPackage": "全部課程組合",
   "page.ProgramPackageProcessBlock.chooseProgramPackage": "選擇課程",
   "page.ProgramPackageProcessBlock.chooseProgramPackageCategory": "選擇課程組合分類",
