--- a/src/translations/locales/id.json
+++ b/src/translations/locales/id.json
@@ -1058,6 +1058,13 @@
   "craft.*.titleStyle": "Gaya Judul",
   "craft.*.variant": "Gaya Komponen",
   "craft.*.width": "lebar",
+  "craft.AIBotSettings.addQuestion": "新增問題",
+  "craft.AIBotSettings.assistantQuestions": "使用者問答",
+  "craft.AIBotSettings.assistantQuestionsPlaceholder": "What do you want to ask?",
+  "craft.AIBotSettings.setting": "基本設定",
+  "craft.AIBotSettings.style": "樣式",
+  "craft.AIBotSettings.systemPrompt": "系統提示詞",
+  "craft.AIBotSettings.systemPromptPlaceholder": "You are an expert of...",
   "craft.ActivityCollectionSettings.activitySectionId": "ID Bagian Aktivitas",
   "craft.BackgroundStyleInput.background": "Latar Belakang",
   "craft.BackgroundStyleInput.image": "Gambar",
@@ -1532,7 +1539,6 @@
   "member.label.timetable": "時間表",
   "member.label.線上課程服務約款": "Kontrak layanan kursus online",
   "member.text.markAsRejection": "Tandai Sebagai Penolakan",
-  "member.text.memberSelect": "請輸入帳號或 Email",
   "member.text.removeMember": "Status siswa akan diubah menjadi Ditolak dan dihapus dari daftar \"Dalam Pengembangan\".",
   "member.ui.memberReject": "Anggota Ditolak",
   "member.ui.switchCalendar": "Ganti Mode Kalender",
@@ -1817,6 +1823,9 @@
   "page.CouponCollectionBlock.showMore": "顯示更多",
   "page.CouponPlanCollectionAdminPage.searchPlaceholder": "搜尋折扣代碼或折價券名稱",
   "page.GiftPlanCollectionAdminPage.giftPlan": "贈品方案",
+  "page.MemberAdminPage.notEnoughCoins": "Coins are not enough!",
+  "page.MemberAdminPage.notEnoughCoinsDescription": "Needs {futureCoins} coins. You need {insufficientCoins} coins more.",
+  "page.MemberAdminPage.remainingCoins": "Still have {remainingCoins} coins.",
   "page.ProgramPackageProcessBlock.allProgramPackage": "Semua Paket Program",
   "page.ProgramPackageProcessBlock.chooseProgramPackage": "選擇課程",
   "page.ProgramPackageProcessBlock.chooseProgramPackageCategory": "Pilih Kategori Paket Kursus",
