--- a/src/translations/locales/vi.json
+++ b/src/translations/locales/vi.json
@@ -1058,6 +1058,13 @@
   "craft.*.titleStyle": " Kiểu tiêu đề ",
   "craft.*.variant": " Thành phần kiểu ",
   "craft.*.width": " width ",
+  "craft.AIBotSettings.addQuestion": "新增問題",
+  "craft.AIBotSettings.assistantQuestions": "使用者問答",
+  "craft.AIBotSettings.assistantQuestionsPlaceholder": "What do you want to ask?",
+  "craft.AIBotSettings.setting": "基本設定",
+  "craft.AIBotSettings.style": "樣式",
+  "craft.AIBotSettings.systemPrompt": "系統提示詞",
+  "craft.AIBotSettings.systemPromptPlaceholder": "You are an expert of...",
   "craft.ActivityCollectionSettings.activitySectionId": " ID Phần Hoạt động ",
   "craft.BackgroundStyleInput.background": " Nền ",
   "craft.BackgroundStyleInput.image": " Hình ảnh ",
@@ -1532,7 +1539,6 @@
   "member.label.timetable": "時間表",
   "member.label.線上課程服務約款": "Hợp đồng dịch vụ khóa học trực tuyến",
   "member.text.markAsRejection": " Đánh dấu là từ chối ",
-  "member.text.memberSelect": "請輸入帳號或 Email",
   "member.text.removeMember": " Trạng thái của sinh viên sẽ được thay đổi thành Bị Từ chối và bị xóa khỏi danh sách\" Đang phát triển \". ",
   "member.ui.memberReject": "Thành viên bị Từ chối ",
   "member.ui.switchCalendar": " Chuyển Chế độ Lịch ",
@@ -1817,6 +1823,9 @@
   "page.CouponCollectionBlock.showMore": "顯示更多",
   "page.CouponPlanCollectionAdminPage.searchPlaceholder": "搜尋折扣代碼或折價券名稱",
   "page.GiftPlanCollectionAdminPage.giftPlan": "贈品方案",
+  "page.MemberAdminPage.notEnoughCoins": "Coins are not enough!",
+  "page.MemberAdminPage.notEnoughCoinsDescription": "Needs {futureCoins} coins. You need {insufficientCoins} coins more.",
+  "page.MemberAdminPage.remainingCoins": "Still have {remainingCoins} coins.",
   "page.ProgramPackageProcessBlock.allProgramPackage": "Tất cả các khóa học",
   "page.ProgramPackageProcessBlock.chooseProgramPackage": "選擇課程",
   "page.ProgramPackageProcessBlock.chooseProgramPackageCategory": "Chọn Phân loại kết hợp khóa học",
