--- a/src/translations/locales/zh-tw.json
+++ b/src/translations/locales/zh-tw.json
@@ -1058,6 +1058,13 @@
   "craft.*.titleStyle": "標題樣式",
   "craft.*.variant": "元件樣式",
   "craft.*.width": "寬度",
+  "craft.AIBotSettings.addQuestion": "新增問題",
+  "craft.AIBotSettings.assistantQuestions": "使用者問答",
+  "craft.AIBotSettings.assistantQuestionsPlaceholder": "What do you want to ask?",
+  "craft.AIBotSettings.setting": "基本設定",
+  "craft.AIBotSettings.style": "樣式",
+  "craft.AIBotSettings.systemPrompt": "系統提示詞",
+  "craft.AIBotSettings.systemPromptPlaceholder": "You are an expert of...",
   "craft.ActivityCollectionSettings.activitySectionId": "活動區塊 ID",
   "craft.BackgroundStyleInput.background": "背景",
   "craft.BackgroundStyleInput.image": "圖片",
@@ -1536,7 +1543,6 @@
   "member.label.timetable": "時間表",
   "member.label.線上課程服務約款": "線上課程服務約款",
   "member.text.markAsRejection": "標註為拒絕",
-  "member.text.memberSelect": "請輸入帳號或 Email",
   "member.text.removeMember": "學員狀態將改為已拒絕，並從「開發中」的名單內抽離。",
   "member.ui.memberReject": "學員拒絕",
   "member.ui.switchCalendar": "切換月曆模式",
@@ -1821,6 +1827,9 @@
   "page.CouponCollectionBlock.showMore": "顯示更多",
   "page.CouponPlanCollectionAdminPage.searchPlaceholder": "搜尋折扣代碼或折價券名稱",
   "page.GiftPlanCollectionAdminPage.giftPlan": "贈品方案",
+  "page.MemberAdminPage.notEnoughCoins": "代幣不足!",
+  "page.MemberAdminPage.notEnoughCoinsDescription": "需要 {futureCoins} 個代幣. 尚缺 {insufficientCoins} 個代幣",
+  "page.MemberAdminPage.remainingCoins": "目前剩餘 {remainingCoins} 個代幣",
   "page.ProgramPackageProcessBlock.allProgramPackage": "全部課程組合",
   "page.ProgramPackageProcessBlock.chooseProgramPackage": "選擇課程",
   "page.ProgramPackageProcessBlock.chooseProgramPackageCategory": "選擇課程組合分類",
