--- a/src/translations/locales/zh-cn.json
+++ b/src/translations/locales/zh-cn.json
@@ -1058,6 +1058,13 @@
   "craft.*.titleStyle": "标题样式",
   "craft.*.variant": "元件样式",
   "craft.*.width": "宽度",
+  "craft.AIBotSettings.addQuestion": "新增問題",
+  "craft.AIBotSettings.assistantQuestions": "使用者問答",
+  "craft.AIBotSettings.assistantQuestionsPlaceholder": "What do you want to ask?",
+  "craft.AIBotSettings.setting": "基本設定",
+  "craft.AIBotSettings.style": "樣式",
+  "craft.AIBotSettings.systemPrompt": "系統提示詞",
+  "craft.AIBotSettings.systemPromptPlaceholder": "You are an expert of...",
   "craft.ActivityCollectionSettings.activitySectionId": "活动区块 ID",
   "craft.BackgroundStyleInput.background": "背景",
   "craft.BackgroundStyleInput.image": "图片",
@@ -1532,7 +1539,6 @@
   "member.label.timetable": "時間表",
   "member.label.線上課程服務約款": "線上課程服務約款",
   "member.text.markAsRejection": "标注为拒绝",
-  "member.text.memberSelect": "請輸入帳號或 Email",
   "member.text.removeMember": "学员状态将改为已拒绝，并从「开发中」的名单内抽离。 ",
   "member.ui.memberReject": "学员拒绝",
   "member.ui.switchCalendar": "切换月历模式",
@@ -1817,6 +1823,9 @@
   "page.CouponCollectionBlock.showMore": "顯示更多",
   "page.CouponPlanCollectionAdminPage.searchPlaceholder": "搜尋折扣代碼或折價券名稱",
   "page.GiftPlanCollectionAdminPage.giftPlan": "贈品方案",
+  "page.MemberAdminPage.notEnoughCoins": "Coins are not enough!",
+  "page.MemberAdminPage.notEnoughCoinsDescription": "Needs {futureCoins} coins. You need {insufficientCoins} coins more.",
+  "page.MemberAdminPage.remainingCoins": "Still have {remainingCoins} coins.",
   "page.ProgramPackageProcessBlock.allProgramPackage": "全部课程组合",
   "page.ProgramPackageProcessBlock.chooseProgramPackage": "選擇課程",
   "page.ProgramPackageProcessBlock.chooseProgramPackageCategory": "选择课程组合分类",
