--- a/src/translations/locales/en-us.json
+++ b/src/translations/locales/en-us.json
@@ -258,6 +258,7 @@
   "admin.AdminMenu.tasks": "To-Do List",
   "admin.AdminMenu.tempoDelivery": "Tempo Delivery",
   "admin.AdminMenu.venueManagement": "場地管理",
+  "admin.AdminMenu.voucherCategory": "voucher category",
   "admin.AdminMenu.voucherPlans": "Voucher Plans",
   "appointment.AppointmentPeriodCard.addToCalendar": "加入行事曆",
   "appointment.AppointmentPeriodCard.appointmentCanceledAt": "已於 {time} 取消預約",
@@ -1845,6 +1846,7 @@
   "page.VenueSeatSetting.row": "橫列",
   "page.VenueSeatSetting.rows": "橫的行數",
   "page.VenueSeatSetting.walkway": "走道",
+  "page.VoucherCategoryPage.voucherCategory": "Voucher Category",
   "page.VoucherPlanCollectionAdminPage.searchPlaceholder": "搜尋兌換代碼或兌換券名稱",
   "page.VoucherPlanCollectionBlock.ditVoucherPlan": "編輯兌換方案",
   "page.VoucherPlanCollectionBlock.edit": "編輯",
