--- a/src/translations/locales/id.json
+++ b/src/translations/locales/id.json
@@ -258,6 +258,7 @@
   "admin.AdminMenu.tasks": "Daftar Tugas",
   "admin.AdminMenu.tempoDelivery": "Pengiriman Tempo",
   "admin.AdminMenu.venueManagement": "場地管理",
+  "admin.AdminMenu.voucherCategory": "voucher kategori",
   "admin.AdminMenu.voucherPlans": "Paket Voucher",
   "appointment.AppointmentPeriodCard.addToCalendar": "Tambahkan ke Kalender",
   "appointment.AppointmentPeriodCard.appointmentCanceledAt": "Janji dibatalkan pada {waktu}",
@@ -1845,6 +1846,7 @@
   "page.VenueSeatSetting.row": "橫列",
   "page.VenueSeatSetting.rows": "橫的行數",
   "page.VenueSeatSetting.walkway": "走道",
+  "page.VoucherCategoryPage.voucherCategory": "voucher kategori",
   "page.VoucherPlanCollectionAdminPage.searchPlaceholder": "搜尋兌換代碼或兌換券名稱",
   "page.VoucherPlanCollectionBlock.ditVoucherPlan": "編輯兌換方案",
   "page.VoucherPlanCollectionBlock.edit": "編輯",
