--- a/src/translations/locales/vi.json
+++ b/src/translations/locales/vi.json
@@ -2507,6 +2507,7 @@
   "sale.OrderExportModal.recipientAddress": "收件地址",
   "sale.OrderExportModal.recipientName": "收件人",
   "sale.OrderExportModal.recipientPhone": "收件電話",
+  "sale.OrderExportModal.referrer": "referrer",
   "sale.OrderExportModal.send": "寄送",
   "sale.OrderExportModal.sharingCode": " URL quảng cáo ",
   "sale.OrderExportModal.sharingNote": " Ghi chú Khuyến mại ",
