feature: add id to section

--- a/src/translations/locales/en-us.json
+++ b/src/translations/locales/en-us.json
@@ -1133,6 +1133,7 @@
   "craft.SectionSettings.normal": "Normal",
   "craft.SectionSettings.openNewTab": "Open New Tab",
   "craft.SectionSettings.right": "Right",
+  "craft.SectionSettings.sectionId": "Section ID",
   "craft.SectionSettings.top": "Top",
   "craft.SectionSettings.vertical": "Vertical Arrangement",
   "craft.SectionSettings.verticalAlign": "Vertical Align",
@@ -2589,6 +2590,7 @@
   "voucher.*.cancel": "Cancel",
   "voucher.*.confirm": "確定",
   "voucher.*.isRequired": "請輸入{field}",
+  "voucher.VoucherPlanAdminModal.VoucherCategory": "兌換分類",
   "voucher.VoucherPlanAdminModal.availableDateRange": "有效期限",
   "voucher.VoucherPlanAdminModal.description": "使用限制與描述",
   "voucher.VoucherPlanAdminModal.duplicateVoucherCode": "該兌換碼已被使用",
