--- a/src/translations/locales/id.json
+++ b/src/translations/locales/id.json
@@ -1133,6 +1133,7 @@
   "craft.SectionSettings.normal": "Normal",
   "craft.SectionSettings.openNewTab": "Buka Tab Baru",
   "craft.SectionSettings.right": "Kanan",
+  "craft.SectionSettings.sectionId": "Section ID",
   "craft.SectionSettings.top": "Atas",
   "craft.SectionSettings.vertical": "Pengaturan Vertikal",
   "craft.SectionSettings.verticalAlign": "Perataan Vertikal",
@@ -2589,6 +2590,7 @@
   "voucher.*.cancel": "取消",
   "voucher.*.confirm": "確定",
   "voucher.*.isRequired": "請輸入{field}",
+  "voucher.VoucherPlanAdminModal.VoucherCategory": "兌換分類",
   "voucher.VoucherPlanAdminModal.availableDateRange": "有效期限",
   "voucher.VoucherPlanAdminModal.description": "使用限制與描述",
   "voucher.VoucherPlanAdminModal.duplicateVoucherCode": "該兌換碼已被使用",
