--- a/src/translations/locales/vi.json
+++ b/src/translations/locales/vi.json
@@ -1133,6 +1133,7 @@
   "craft.SectionSettings.normal": " Bình thường ",
   "craft.SectionSettings.openNewTab": " Mở tab mới ",
   "craft.SectionSettings.right": " Đúng ",
+  "craft.SectionSettings.sectionId": "Section ID",
   "craft.SectionSettings.top": " Top ",
   "craft.SectionSettings.vertical": " Sắp xếp theo chiều dọc ",
   "craft.SectionSettings.verticalAlign": " Căn chỉnh theo chiều dọc ",
@@ -2589,6 +2590,7 @@
   "voucher.*.cancel": "取消",
   "voucher.*.confirm": "確定",
   "voucher.*.isRequired": "請輸入{field}",
+  "voucher.VoucherPlanAdminModal.VoucherCategory": "兌換分類",
   "voucher.VoucherPlanAdminModal.availableDateRange": "有效期限",
   "voucher.VoucherPlanAdminModal.description": "使用限制與描述",
   "voucher.VoucherPlanAdminModal.duplicateVoucherCode": "該兌換碼已被使用",
