--- a/src/translations/locales/zh-cn.json
+++ b/src/translations/locales/zh-cn.json
@@ -1133,6 +1133,7 @@
   "craft.SectionSettings.normal": "正常",
   "craft.SectionSettings.openNewTab": "另开分页",
   "craft.SectionSettings.right": "置右",
+  "craft.SectionSettings.sectionId": "区块 ID",
   "craft.SectionSettings.top": "置顶",
   "craft.SectionSettings.vertical": "垂直排列",
   "craft.SectionSettings.verticalAlign": "垂直对齐",
@@ -2589,6 +2590,7 @@
   "voucher.*.cancel": "取消",
   "voucher.*.confirm": "確定",
   "voucher.*.isRequired": "請輸入{field}",
+  "voucher.VoucherPlanAdminModal.VoucherCategory": "兌換分類",
   "voucher.VoucherPlanAdminModal.availableDateRange": "有效期限",
   "voucher.VoucherPlanAdminModal.description": "使用限制與描述",
   "voucher.VoucherPlanAdminModal.duplicateVoucherCode": "該兌換碼已被使用",
