fix: yarn trans

--- a/src/translations/locales/id.json
+++ b/src/translations/locales/id.json
@@ -476,6 +476,7 @@
   "common.event.loading": "Memuat",
   "common.event.publishedSuccessfully": "Berhasil Diterbitkan",
   "common.event.publishingFailed": "Penerbitan Gagal",
+  "common.event.retryLater": "請再試一次",
   "common.event.successfullyCreated": "Dibuat",
   "common.event.successfullyDeleted": "Dihapus",
   "common.event.successfullyEdited": "Berhasil diedit",
@@ -2589,6 +2590,7 @@
   "voucher.*.cancel": "取消",
   "voucher.*.confirm": "確定",
   "voucher.*.isRequired": "請輸入{field}",
+  "voucher.VoucherPlanAdminModal.VoucherCategory": "兌換分類",
   "voucher.VoucherPlanAdminModal.availableDateRange": "有效期限",
   "voucher.VoucherPlanAdminModal.description": "使用限制與描述",
   "voucher.VoucherPlanAdminModal.duplicateVoucherCode": "該兌換碼已被使用",
