--- a/src/translations/locales/zh-cn.json
+++ b/src/translations/locales/zh-cn.json
@@ -476,6 +476,7 @@
   "common.event.loading": "载入中",
   "common.event.publishedSuccessfully": "发布成功",
   "common.event.publishingFailed": "发布失败",
+  "common.event.retryLater": "請再試一次",
   "common.event.successfullyCreated": "建立成功",
   "common.event.successfullyDeleted": "删除成功",
   "common.event.successfullyEdited": "编辑成功",
@@ -2589,6 +2590,7 @@
   "voucher.*.cancel": "取消",
   "voucher.*.confirm": "確定",
   "voucher.*.isRequired": "請輸入{field}",
+  "voucher.VoucherPlanAdminModal.VoucherCategory": "兌換分類",
   "voucher.VoucherPlanAdminModal.availableDateRange": "有效期限",
   "voucher.VoucherPlanAdminModal.description": "使用限制與描述",
   "voucher.VoucherPlanAdminModal.duplicateVoucherCode": "該兌換碼已被使用",
