--- a/src/translations/locales/zh-tw.json
+++ b/src/translations/locales/zh-tw.json
@@ -476,6 +476,7 @@
   "common.event.loading": "載入中",
   "common.event.publishedSuccessfully": "發佈成功",
   "common.event.publishingFailed": "發佈失敗",
+  "common.event.retryLater": "請再試一次",
   "common.event.successfullyCreated": "建立成功",
   "common.event.successfullyDeleted": "刪除成功",
   "common.event.successfullyEdited": "編輯成功",
