--- a/src/translations/locales/zh-tw.json
+++ b/src/translations/locales/zh-tw.json
@@ -1441,7 +1441,7 @@
   "form.PermissionGroup.PROJECT_ROLE_ADMIN": "角色管理",
   "form.PermissionGroup.SALES_CALL_ADMIN": "檢視業務專區",
   "form.PermissionGroup.SALES_EXPORT": "匯出所有訂單",
-  "form.PermissionGroup.SALES_LEAD_ADMIN": "名單撥打",
+  "form.PermissionGroup.SALES_LEAD_ADMIN": "名單撥打管理功能",
   "form.PermissionGroup.SALES_LEAD_DELIVERY_ADMIN": "名單分派功能",
   "form.PermissionGroup.SALES_LEAD_SELECTOR_ADMIN": "名單撥打選擇器功能",
   "form.PermissionGroup.SALES_PERFORMANCE_ADMIN": "業績總表",
