feature: sale lead delivery filter exact match

--- a/src/translations/locales/en-us.json
+++ b/src/translations/locales/en-us.json
@@ -1297,6 +1297,7 @@
   "error.text.invalidURL": "Invalid URL",
   "error.text.memberAlreadyExist": "Member already exists",
   "form.*.endedAt": "截止日期",
+  "form.*.loading": "Loading...",
   "form.*.startedAt": "開始日期",
   "form.GiftPlanInput.selectGiftPlan": "選擇贈品方案",
   "form.GiftPlanInput.whetherProvideGift": "是否有提供贈品",
@@ -1867,6 +1868,7 @@
   "page.salesLeadDeliveryPage.deliveringMessage": "正在派發名單中，請稍等",
   "page.salesLeadDeliveryPage.deliveryConfirm": "確認派發",
   "page.salesLeadDeliveryPage.deliveryResult": "派發結果",
+  "page.salesLeadDeliveryPage.exactMatch": "Exact Match",
   "page.salesLeadDeliveryPage.expectedDeliveryAmount": "預計派發名單數",
   "page.salesLeadDeliveryPage.field": "領域",
   "page.salesLeadDeliveryPage.filterSalesLead": "篩選名單",
