--- a/src/translations/locales/vi.json
+++ b/src/translations/locales/vi.json
@@ -1297,6 +1297,7 @@
   "error.text.invalidURL": " URL không hợp lệ ",
   "error.text.memberAlreadyExist": " Thành viên đã tồn tại ",
   "form.*.endedAt": "截止日期",
+  "form.*.loading": "讀取中",
   "form.*.startedAt": "開始日期",
   "form.GiftPlanInput.selectGiftPlan": "選擇贈品方案",
   "form.GiftPlanInput.whetherProvideGift": "是否有提供贈品",
@@ -1867,6 +1868,7 @@
   "page.salesLeadDeliveryPage.deliveringMessage": "正在派發名單中，請稍等",
   "page.salesLeadDeliveryPage.deliveryConfirm": "確認派發",
   "page.salesLeadDeliveryPage.deliveryResult": "派發結果",
+  "page.salesLeadDeliveryPage.exactMatch": "完全匹配",
   "page.salesLeadDeliveryPage.expectedDeliveryAmount": "預計派發名單數",
   "page.salesLeadDeliveryPage.field": "領域",
   "page.salesLeadDeliveryPage.filterSalesLead": "篩選名單",
