--- a/src/translations/locales/zh-tw.json
+++ b/src/translations/locales/zh-tw.json
@@ -1297,6 +1297,7 @@
   "error.text.invalidURL": "無效的網址",
   "error.text.memberAlreadyExist": "會員已存在",
   "form.*.endedAt": "截止日期",
+  "form.*.loading": "讀取中",
   "form.*.startedAt": "開始日期",
   "form.GiftPlanInput.hasGiftPlan": "有贈品",
   "form.GiftPlanInput.noGiftPlan": "無贈品",
@@ -1871,6 +1872,7 @@
   "page.salesLeadDeliveryPage.deliveringMessage": "正在派發名單中，請稍等",
   "page.salesLeadDeliveryPage.deliveryConfirm": "確認派發",
   "page.salesLeadDeliveryPage.deliveryResult": "派發結果",
+  "page.salesLeadDeliveryPage.exactMatch": "完全匹配",
   "page.salesLeadDeliveryPage.expectedDeliveryAmount": "預計派發名單數",
   "page.salesLeadDeliveryPage.field": "領域",
   "page.salesLeadDeliveryPage.filterSalesLead": "篩選名單",
