feature: sale lead filter exact match

--- a/src/translations/locales/vi.json
+++ b/src/translations/locales/vi.json
@@ -1300,6 +1300,7 @@
   "error.text.invalidURL": " URL không hợp lệ ",
   "error.text.memberAlreadyExist": " Thành viên đã tồn tại ",
   "form.*.endedAt": "截止日期",
+  "form.*.loading": "讀取中",
   "form.*.startedAt": "開始日期",
   "form.GiftPlanInput.selectGiftPlan": "選擇贈品方案",
   "form.GiftPlanInput.whetherProvideGift": "是否有提供贈品",
@@ -1441,6 +1442,7 @@
   "form.PermissionGroup.SALES_EXPORT": "Nhập tất cả các đơn đặt hàng",
   "form.PermissionGroup.SALES_LEAD_ADMIN": "Liệt kê chức năng quản lý cuộc gọi",
   "form.PermissionGroup.SALES_LEAD_DELIVERY_ADMIN": "Danh sách chức năng phân phối",
+  "form.PermissionGroup.SALES_LEAD_NORMAL": "個人名單撥打功能",
   "form.PermissionGroup.SALES_LEAD_SELECTOR_ADMIN": "Liệt kê chức năng thiết bị lựa chọn quay số",
   "form.PermissionGroup.SALES_PERFORMANCE_ADMIN": "Tổng số bảng hiệu suất",
   "form.PermissionGroup.SALES_READ": "Xem tất cả các đơn đặt hàng",
@@ -1918,6 +1920,7 @@
   "page.salesLeadDeliveryPage.deliveringMessage": "正在派發名單中，請稍等",
   "page.salesLeadDeliveryPage.deliveryConfirm": "確認派發",
   "page.salesLeadDeliveryPage.deliveryResult": "派發結果",
+  "page.salesLeadDeliveryPage.exactMatch": "完全匹配",
   "page.salesLeadDeliveryPage.expectedDeliveryAmount": "預計派發名單數",
   "page.salesLeadDeliveryPage.field": "領域",
   "page.salesLeadDeliveryPage.filterSalesLead": "篩選名單",
