--- a/src/translations/locales/zh-tw.json
+++ b/src/translations/locales/zh-tw.json
@@ -1300,6 +1300,7 @@
   "error.text.invalidURL": "無效的網址",
   "error.text.memberAlreadyExist": "會員已存在",
   "form.*.endedAt": "截止日期",
+  "form.*.loading": "讀取中",
   "form.*.startedAt": "開始日期",
   "form.GiftPlanInput.hasGiftPlan": "有贈品",
   "form.GiftPlanInput.noGiftPlan": "無贈品",
@@ -1445,6 +1446,7 @@
   "form.PermissionGroup.SALES_EXPORT": "匯出所有訂單",
   "form.PermissionGroup.SALES_LEAD_ADMIN": "名單撥打管理功能",
   "form.PermissionGroup.SALES_LEAD_DELIVERY_ADMIN": "名單分派功能",
+  "form.PermissionGroup.SALES_LEAD_NORMAL": "個人名單撥打功能",
   "form.PermissionGroup.SALES_LEAD_SELECTOR_ADMIN": "名單撥打選擇器功能",
   "form.PermissionGroup.SALES_PERFORMANCE_ADMIN": "業績總表",
   "form.PermissionGroup.SALES_READ": "查看所有訂單",
@@ -1922,6 +1924,7 @@
   "page.salesLeadDeliveryPage.deliveringMessage": "正在派發名單中，請稍等",
   "page.salesLeadDeliveryPage.deliveryConfirm": "確認派發",
   "page.salesLeadDeliveryPage.deliveryResult": "派發結果",
+  "page.salesLeadDeliveryPage.exactMatch": "完全匹配",
   "page.salesLeadDeliveryPage.expectedDeliveryAmount": "預計派發名單數",
   "page.salesLeadDeliveryPage.field": "領域",
   "page.salesLeadDeliveryPage.filterSalesLead": "篩選名單",
