--- a/src/translations/locales/en-us.json
+++ b/src/translations/locales/en-us.json
@@ -1300,6 +1300,7 @@
   "error.text.invalidURL": "Invalid URL",
   "error.text.memberAlreadyExist": "Member already exists",
   "form.*.endedAt": "截止日期",
+  "form.*.loading": "讀取中",
   "form.*.startedAt": "開始日期",
   "form.GiftPlanInput.selectGiftPlan": "選擇贈品方案",
   "form.GiftPlanInput.whetherProvideGift": "是否有提供贈品",
@@ -1441,6 +1442,7 @@
   "form.PermissionGroup.SALES_EXPORT": "匯出所有訂單",
   "form.PermissionGroup.SALES_LEAD_ADMIN": "Sales Lead Management",
   "form.PermissionGroup.SALES_LEAD_DELIVERY_ADMIN": "名單分派功能",
+  "form.PermissionGroup.SALES_LEAD_NORMAL": "個人名單撥打功能",
   "form.PermissionGroup.SALES_LEAD_SELECTOR_ADMIN": "名單撥打選擇器功能",
   "form.PermissionGroup.SALES_PERFORMANCE_ADMIN": "業績總表",
   "form.PermissionGroup.SALES_READ": "查看所有訂單",
@@ -1918,6 +1920,7 @@
   "page.salesLeadDeliveryPage.deliveringMessage": "正在派發名單中，請稍等",
   "page.salesLeadDeliveryPage.deliveryConfirm": "確認派發",
   "page.salesLeadDeliveryPage.deliveryResult": "派發結果",
+  "page.salesLeadDeliveryPage.exactMatch": "Exact Match",
   "page.salesLeadDeliveryPage.expectedDeliveryAmount": "預計派發名單數",
   "page.salesLeadDeliveryPage.field": "領域",
   "page.salesLeadDeliveryPage.filterSalesLead": "篩選名單",
