--- a/src/translations/locales/id.json
+++ b/src/translations/locales/id.json
@@ -1300,6 +1300,7 @@
   "error.text.invalidURL": "URL tidak valid",
   "error.text.memberAlreadyExist": "Anggota sudah ada",
   "form.*.endedAt": "截止日期",
+  "form.*.loading": "讀取中",
   "form.*.startedAt": "開始日期",
   "form.GiftPlanInput.selectGiftPlan": "選擇贈品方案",
   "form.GiftPlanInput.whetherProvideGift": "是否有提供贈品",
@@ -1441,6 +1442,7 @@
   "form.PermissionGroup.SALES_EXPORT": "Ekspor semua pesanan",
   "form.PermissionGroup.SALES_LEAD_ADMIN": "Daftar fungsi manajemen panggilan",
   "form.PermissionGroup.SALES_LEAD_DELIVERY_ADMIN": "Fungsi Penetapan Daftar",
+  "form.PermissionGroup.SALES_LEAD_NORMAL": "個人名單撥打功能",
   "form.PermissionGroup.SALES_LEAD_SELECTOR_ADMIN": "Fungsi pemilih dial daftar",
   "form.PermissionGroup.SALES_PERFORMANCE_ADMIN": "Ringkasan Kinerja",
   "form.PermissionGroup.SALES_READ": "Lihat semua pesanan",
@@ -1918,6 +1920,7 @@
   "page.salesLeadDeliveryPage.deliveringMessage": "正在派發名單中，請稍等",
   "page.salesLeadDeliveryPage.deliveryConfirm": "確認派發",
   "page.salesLeadDeliveryPage.deliveryResult": "派發結果",
+  "page.salesLeadDeliveryPage.exactMatch": "完全匹配",
   "page.salesLeadDeliveryPage.expectedDeliveryAmount": "預計派發名單數",
   "page.salesLeadDeliveryPage.field": "領域",
   "page.salesLeadDeliveryPage.filterSalesLead": "篩選名單",
