--- a/src/translations/locales/vi.json
+++ b/src/translations/locales/vi.json
@@ -1440,7 +1440,7 @@
   "form.PermissionGroup.PROJECT_ROLE_ADMIN": "角色管理",
   "form.PermissionGroup.SALES_CALL_ADMIN": "Kiểm tra khu vực kinh doanh",
   "form.PermissionGroup.SALES_EXPORT": "Nhập tất cả các đơn đặt hàng",
-  "form.PermissionGroup.SALES_LEAD_ADMIN": "Liệt kê chức năng quản lý cuộc gọi",
+  "form.PermissionGroup.SALES_LEAD_ADMIN": "Tất cả các tính năng quay số danh sách",
   "form.PermissionGroup.SALES_LEAD_DELIVERY_ADMIN": "Danh sách chức năng phân phối",
   "form.PermissionGroup.SALES_LEAD_NORMAL": "個人名單撥打功能",
   "form.PermissionGroup.SALES_LEAD_SELECTOR_ADMIN": "Liệt kê chức năng thiết bị lựa chọn quay số",
