--- a/src/translations/locales/zh-cn.json
+++ b/src/translations/locales/zh-cn.json
@@ -1440,7 +1440,7 @@
   "form.PermissionGroup.PROJECT_ROLE_ADMIN": "角色管理",
   "form.PermissionGroup.SALES_CALL_ADMIN": "检视业务专区",
   "form.PermissionGroup.SALES_EXPORT": "汇出所有订单",
-  "form.PermissionGroup.SALES_LEAD_ADMIN": "名单拨打",
+  "form.PermissionGroup.SALES_LEAD_ADMIN": "所有名单拨打功能",
   "form.PermissionGroup.SALES_LEAD_DELIVERY_ADMIN": "名单分派功能",
   "form.PermissionGroup.SALES_LEAD_NORMAL": "個人名單撥打功能",
   "form.PermissionGroup.SALES_LEAD_SELECTOR_ADMIN": "名单拨打选择器功能",
