--- a/src/translations/locales/id.json
+++ b/src/translations/locales/id.json
@@ -1297,6 +1297,7 @@
   "error.text.invalidURL": "URL tidak valid",
   "error.text.memberAlreadyExist": "Anggota sudah ada",
   "form.*.endedAt": "截止日期",
+  "form.*.loading": "讀取中",
   "form.*.startedAt": "開始日期",
   "form.GiftPlanInput.selectGiftPlan": "選擇贈品方案",
   "form.GiftPlanInput.whetherProvideGift": "是否有提供贈品",
@@ -1371,6 +1372,7 @@
   "form.PermissionGroup.MEMBER_CREATE": "添加會員",
   "form.PermissionGroup.MEMBER_EMAIL_EDIT": "Edit kotak surat",
   "form.PermissionGroup.MEMBER_MANAGER_ADMIN": "Tetapkan Fungsi Manajer",
+  "form.PermissionGroup.MEMBER_NOTE_ADMIN": "聯絡記錄管理功能",
   "form.PermissionGroup.MEMBER_PHONE_ADMIN": "Lihat Bidang Telepon",
   "form.PermissionGroup.MEMBER_PROPERTY_ADMIN": "Semua fitur bidang khusus",
   "form.PermissionGroup.MEMBER_STAR_ADMIN": "Lihat Bidang Besaran Bintang",
@@ -1436,6 +1438,7 @@
   "form.PermissionGroup.SALES_EXPORT": "Ekspor semua pesanan",
   "form.PermissionGroup.SALES_LEAD_ADMIN": "Daftar panggilan",
   "form.PermissionGroup.SALES_LEAD_DELIVERY_ADMIN": "Fungsi Penetapan Daftar",
+  "form.PermissionGroup.SALES_LEAD_NORMAL": "個人名單撥打管理功能",
   "form.PermissionGroup.SALES_LEAD_SELECTOR_ADMIN": "Fungsi pemilih dial daftar",
   "form.PermissionGroup.SALES_PERFORMANCE_ADMIN": "Ringkasan Kinerja",
   "form.PermissionGroup.SALES_READ": "Lihat semua pesanan",
@@ -1464,6 +1467,7 @@
   "form.PermissionInput.customScript": "自訂腳本",
   "form.PermissionInput.mediaLibrary": "Perpustakaan Media",
   "form.PermissionInput.memberAdmin": "Manajemen Anggota",
+  "form.PermissionInput.memberNote": "聯絡記錄",
   "form.PermissionInput.merchandise": "Manajemen e-niaga",
   "form.PermissionInput.post": "Artikel Media",
   "form.PermissionInput.program": "Kursus Online",
