--- a/src/translations/locales/vi.json
+++ b/src/translations/locales/vi.json
@@ -1297,6 +1297,7 @@
   "error.text.invalidURL": " URL không hợp lệ ",
   "error.text.memberAlreadyExist": " Thành viên đã tồn tại ",
   "form.*.endedAt": "截止日期",
+  "form.*.loading": "讀取中",
   "form.*.startedAt": "開始日期",
   "form.GiftPlanInput.selectGiftPlan": "選擇贈品方案",
   "form.GiftPlanInput.whetherProvideGift": "是否有提供贈品",
@@ -1371,6 +1372,7 @@
   "form.PermissionGroup.MEMBER_CREATE": "Thêm thành viên",
   "form.PermissionGroup.MEMBER_EMAIL_EDIT": "Chỉnh sửa hộp thư",
   "form.PermissionGroup.MEMBER_MANAGER_ADMIN": "Đăng ký chức năng của người tổ chức",
+  "form.PermissionGroup.MEMBER_NOTE_ADMIN": "聯絡記錄管理功能",
   "form.PermissionGroup.MEMBER_PHONE_ADMIN": "Kiểm tra thanh điện thoại",
   "form.PermissionGroup.MEMBER_PROPERTY_ADMIN": "Tất cả các chức năng trường tự lập",
   "form.PermissionGroup.MEMBER_STAR_ADMIN": "Kiểm tra các ngôi sao và các lĩnh vực khác",
@@ -1436,6 +1438,7 @@
   "form.PermissionGroup.SALES_EXPORT": "Nhập tất cả các đơn đặt hàng",
   "form.PermissionGroup.SALES_LEAD_ADMIN": "Danh sách",
   "form.PermissionGroup.SALES_LEAD_DELIVERY_ADMIN": "Danh sách chức năng phân phối",
+  "form.PermissionGroup.SALES_LEAD_NORMAL": "個人名單撥打管理功能",
   "form.PermissionGroup.SALES_LEAD_SELECTOR_ADMIN": "Liệt kê chức năng thiết bị lựa chọn quay số",
   "form.PermissionGroup.SALES_PERFORMANCE_ADMIN": "Tổng số bảng hiệu suất",
   "form.PermissionGroup.SALES_READ": "Xem tất cả các đơn đặt hàng",
@@ -1464,6 +1467,7 @@
   "form.PermissionInput.customScript": "自訂腳本",
   "form.PermissionInput.mediaLibrary": "Thư viện truyền thông",
   "form.PermissionInput.memberAdmin": "Quản lý thành viên",
+  "form.PermissionInput.memberNote": "聯絡記錄",
   "form.PermissionInput.merchandise": "Quản lý Thương mại điện tử",
   "form.PermissionInput.post": "Bài viết truyền thông",
   "form.PermissionInput.program": "Khóa học trực tuyến",
