--- a/src/translations/locales/en-us.json
+++ b/src/translations/locales/en-us.json
@@ -1297,6 +1297,7 @@
   "error.text.invalidURL": "Invalid URL",
   "error.text.memberAlreadyExist": "Member already exists",
   "form.*.endedAt": "截止日期",
+  "form.*.loading": "讀取中",
   "form.*.startedAt": "開始日期",
   "form.GiftPlanInput.selectGiftPlan": "選擇贈品方案",
   "form.GiftPlanInput.whetherProvideGift": "是否有提供贈品",
@@ -1371,6 +1372,7 @@
   "form.PermissionGroup.MEMBER_CREATE": "添加會員",
   "form.PermissionGroup.MEMBER_EMAIL_EDIT": "編輯信箱",
   "form.PermissionGroup.MEMBER_MANAGER_ADMIN": "指派承辦人功能",
+  "form.PermissionGroup.MEMBER_NOTE_ADMIN": "聯絡記錄管理功能",
   "form.PermissionGroup.MEMBER_PHONE_ADMIN": "檢視電話欄位",
   "form.PermissionGroup.MEMBER_PROPERTY_ADMIN": "所有自訂欄位功能",
   "form.PermissionGroup.MEMBER_STAR_ADMIN": "檢視星等欄位",
@@ -1436,6 +1438,7 @@
   "form.PermissionGroup.SALES_EXPORT": "匯出所有訂單",
   "form.PermissionGroup.SALES_LEAD_ADMIN": "名單撥打",
   "form.PermissionGroup.SALES_LEAD_DELIVERY_ADMIN": "名單分派功能",
+  "form.PermissionGroup.SALES_LEAD_NORMAL": "個人名單撥打管理功能",
   "form.PermissionGroup.SALES_LEAD_SELECTOR_ADMIN": "名單撥打選擇器功能",
   "form.PermissionGroup.SALES_PERFORMANCE_ADMIN": "業績總表",
   "form.PermissionGroup.SALES_READ": "查看所有訂單",
@@ -1464,6 +1467,7 @@
   "form.PermissionInput.customScript": "自訂腳本",
   "form.PermissionInput.mediaLibrary": "媒體庫",
   "form.PermissionInput.memberAdmin": "會員管理",
+  "form.PermissionInput.memberNote": "聯絡記錄",
   "form.PermissionInput.merchandise": "電商管理",
   "form.PermissionInput.post": "媒體文章",
   "form.PermissionInput.program": "線上課程",
