--- a/src/translations/locales/zh-cn.json
+++ b/src/translations/locales/zh-cn.json
@@ -1297,6 +1297,7 @@
   "error.text.invalidURL": "无效的网址",
   "error.text.memberAlreadyExist": "会员已存在",
   "form.*.endedAt": "截止日期",
+  "form.*.loading": "讀取中",
   "form.*.startedAt": "開始日期",
   "form.GiftPlanInput.selectGiftPlan": "選擇贈品方案",
   "form.GiftPlanInput.whetherProvideGift": "是否有提供贈品",
@@ -1371,6 +1372,7 @@
   "form.PermissionGroup.MEMBER_CREATE": "添加会员",
   "form.PermissionGroup.MEMBER_EMAIL_EDIT": "编辑信箱",
   "form.PermissionGroup.MEMBER_MANAGER_ADMIN": "指派承办人功能",
+  "form.PermissionGroup.MEMBER_NOTE_ADMIN": "聯絡記錄管理功能",
   "form.PermissionGroup.MEMBER_PHONE_ADMIN": "检视电话栏位",
   "form.PermissionGroup.MEMBER_PROPERTY_ADMIN": "所有自订栏位功能",
   "form.PermissionGroup.MEMBER_STAR_ADMIN": "检视星等栏位",
@@ -1436,6 +1438,7 @@
   "form.PermissionGroup.SALES_EXPORT": "汇出所有订单",
   "form.PermissionGroup.SALES_LEAD_ADMIN": "名单拨打",
   "form.PermissionGroup.SALES_LEAD_DELIVERY_ADMIN": "名单分派功能",
+  "form.PermissionGroup.SALES_LEAD_NORMAL": "個人名單撥打管理功能",
   "form.PermissionGroup.SALES_LEAD_SELECTOR_ADMIN": "名单拨打选择器功能",
   "form.PermissionGroup.SALES_PERFORMANCE_ADMIN": "业绩总表",
   "form.PermissionGroup.SALES_READ": "查看所有订单",
@@ -1464,6 +1467,7 @@
   "form.PermissionInput.customScript": "自訂腳本",
   "form.PermissionInput.mediaLibrary": "媒体库",
   "form.PermissionInput.memberAdmin": "会员管理",
+  "form.PermissionInput.memberNote": "聯絡記錄",
   "form.PermissionInput.merchandise": "电商管理",
   "form.PermissionInput.post": "媒体文章",
   "form.PermissionInput.program": "线上课程",
