--- a/src/translations/locales/id.json
+++ b/src/translations/locales/id.json
@@ -543,6 +543,7 @@
   "common.label.discountDownPrice": "Harga Diskon",
   "common.label.draft": "Draf",
   "common.label.email": "Email",
+  "common.label.emailForEnglish": "Email",
   "common.label.endedAt": "Waktu Berakhir",
   "common.label.example": "Contoh",
   "common.label.exportFields": "Bidang Ekspor",
@@ -576,6 +577,7 @@
   "common.label.keywords": "keywords",
   "common.label.languages": "Bahasa",
   "common.label.lastLogin": "Login Terakhir",
+  "common.label.leadLevel": "分級",
   "common.label.learningDuration": "Jam belajar",
   "common.label.learningProgress": "Kemajuan Pembelajaran",
   "common.label.listPrice": "Harga",
@@ -1297,6 +1299,7 @@
   "error.text.invalidURL": "URL tidak valid",
   "error.text.memberAlreadyExist": "Anggota sudah ada",
   "form.*.endedAt": "截止日期",
+  "form.*.loading": "讀取中",
   "form.*.startedAt": "開始日期",
   "form.GiftPlanInput.selectGiftPlan": "選擇贈品方案",
   "form.GiftPlanInput.whetherProvideGift": "是否有提供贈品",
@@ -1371,6 +1374,7 @@
   "form.PermissionGroup.MEMBER_CREATE": "添加會員",
   "form.PermissionGroup.MEMBER_EMAIL_EDIT": "Edit kotak surat",
   "form.PermissionGroup.MEMBER_MANAGER_ADMIN": "Tetapkan Fungsi Manajer",
+  "form.PermissionGroup.MEMBER_NOTE_ADMIN": "聯絡記錄管理功能",
   "form.PermissionGroup.MEMBER_PHONE_ADMIN": "Lihat Bidang Telepon",
   "form.PermissionGroup.MEMBER_PROPERTY_ADMIN": "Semua fitur bidang khusus",
   "form.PermissionGroup.MEMBER_STAR_ADMIN": "Lihat Bidang Besaran Bintang",
@@ -1436,6 +1440,7 @@
   "form.PermissionGroup.SALES_EXPORT": "Ekspor semua pesanan",
   "form.PermissionGroup.SALES_LEAD_ADMIN": "Daftar panggilan",
   "form.PermissionGroup.SALES_LEAD_DELIVERY_ADMIN": "Fungsi Penetapan Daftar",
+  "form.PermissionGroup.SALES_LEAD_NORMAL": "個人名單撥打管理功能",
   "form.PermissionGroup.SALES_LEAD_SELECTOR_ADMIN": "Fungsi pemilih dial daftar",
   "form.PermissionGroup.SALES_PERFORMANCE_ADMIN": "Ringkasan Kinerja",
   "form.PermissionGroup.SALES_READ": "Lihat semua pesanan",
@@ -1464,6 +1469,7 @@
   "form.PermissionInput.customScript": "自訂腳本",
   "form.PermissionInput.mediaLibrary": "Perpustakaan Media",
   "form.PermissionInput.memberAdmin": "Manajemen Anggota",
+  "form.PermissionInput.memberNote": "聯絡記錄",
   "form.PermissionInput.merchandise": "Manajemen e-niaga",
   "form.PermissionInput.post": "Artikel Media",
   "form.PermissionInput.program": "Kursus Online",
@@ -1867,9 +1873,12 @@
   "page.salesLeadDeliveryPage.deliveringMessage": "正在派發名單中，請稍等",
   "page.salesLeadDeliveryPage.deliveryConfirm": "確認派發",
   "page.salesLeadDeliveryPage.deliveryResult": "派發結果",
+  "page.salesLeadDeliveryPage.exactMatch": "完全匹配",
   "page.salesLeadDeliveryPage.expectedDeliveryAmount": "預計派發名單數",
   "page.salesLeadDeliveryPage.field": "領域",
   "page.salesLeadDeliveryPage.filterSalesLead": "篩選名單",
+  "page.salesLeadDeliveryPage.lastCalledRange": "上次撥打日期",
+  "page.salesLeadDeliveryPage.lastContactRange": "上次接通日期",
   "page.salesLeadDeliveryPage.marketingActivity": "行銷活動",
   "page.salesLeadDeliveryPage.nextStep": "下一步",
   "page.salesLeadDeliveryPage.originalManager": "原承辦人",
@@ -2544,6 +2553,7 @@
   "sale.SaleCollectionAdminCard.removeEquity": "Hapus Ekuitas",
   "sale.SaleCollectionAdminCard.removeEquityWarning": "Operasi ini akan menghapus hak penggunaan {productName} . Yakin ingin menghapusnya?",
   "sale.SaleCollectionAdminCard.updateEquitySuccessfully": "Berhasil Mengubah Ekuitas",
+  "sales.label.answeredLeads": "已接通名單",
   "sales.label.autoStartCalls": "PanggilOtomatis",
   "sales.label.chaileaseApply": "Ajukan pembiayaan",
   "sales.label.chaileaseLookup": "Pencarian Daftar",
@@ -2551,6 +2561,7 @@
   "sales.label.contactedLead": "ContactedLead",
   "sales.label.createdAt": "Tanggal Dibuat",
   "sales.label.deals": "Terserah",
+  "sales.label.followedLead": "Daftar Favorit",
   "sales.label.idledLead": "Daftar Tidak Terhubung",
   "sales.label.invitedLead": "InvitedLead",
   "sales.label.keepInTouch": "Dalam Pengembangan",
@@ -2561,6 +2572,7 @@
   "sales.label.potentials": "Untuk dikembangkan",
   "sales.label.presentedLead": "ShowedLead",
   "sales.label.productItem": "Item Produk",
+  "sales.label.recentAnsweredAt": "最近接通",
   "sales.label.recentContactedAt": "Kontak Terbaru",
   "sales.label.recentTaskedAt": "Baru-baru Ini Untuk Dilakukan",
   "sales.label.rejected": "Ditolak",
@@ -2571,11 +2583,12 @@
   "sales.label.salesPerformance": "Ringkasan Kinerja",
   "sales.label.salesStatus": "Status Pertempuran Langsung",
   "sales.label.serviceEndedAt": "Layanan Berakhir Pada",
+  "sales.label.signedLead": "已簽約",
   "sales.label.star": "Tingkat Bintang",
-  "sales.label.starredLead": "Daftar Favorit",
   "sales.label.status": "Status",
   "sales.label.studentName": "Nama Mahasiswa",
   "sales.label.tel": "Telp",
+  "sales.label.totalLead": "全部",
   "sales.orderImportModal.description": "Klik di sini untuk mengunduh template",
   "sales.orderImportModal.failed": "Upload gagal",
   "sales.orderImportModal.note": "Ukuran file maksimum 10MB",
