--- a/src/translations/locales/vi.json
+++ b/src/translations/locales/vi.json
@@ -543,6 +543,7 @@
   "common.label.discountDownPrice": "Giảm giá xuống",
   "common.label.draft": "Bản nháp",
   "common.label.email": "Email",
+  "common.label.emailForEnglish": "Email",
   "common.label.endedAt": "Thời gian kết thúc",
   "common.label.example": " Ví dụ ",
   "common.label.exportFields": " Trường Xuất ",
@@ -576,6 +577,7 @@
   "common.label.keywords": "keywords",
   "common.label.languages": "Ngôn ngữ",
   "common.label.lastLogin": "Lần Đăng nhập Cuối cùng",
+  "common.label.leadLevel": "分級",
   "common.label.learningDuration": " Giờ học ",
   "common.label.learningProgress": " Tiến trình học tập ",
   "common.label.listPrice": " Định giá ",
@@ -1297,6 +1299,7 @@
   "error.text.invalidURL": " URL không hợp lệ ",
   "error.text.memberAlreadyExist": " Thành viên đã tồn tại ",
   "form.*.endedAt": "截止日期",
+  "form.*.loading": "讀取中",
   "form.*.startedAt": "開始日期",
   "form.GiftPlanInput.selectGiftPlan": "選擇贈品方案",
   "form.GiftPlanInput.whetherProvideGift": "是否有提供贈品",
@@ -1371,6 +1374,7 @@
   "form.PermissionGroup.MEMBER_CREATE": "Thêm thành viên",
   "form.PermissionGroup.MEMBER_EMAIL_EDIT": "Chỉnh sửa hộp thư",
   "form.PermissionGroup.MEMBER_MANAGER_ADMIN": "Đăng ký chức năng của người tổ chức",
+  "form.PermissionGroup.MEMBER_NOTE_ADMIN": "聯絡記錄管理功能",
   "form.PermissionGroup.MEMBER_PHONE_ADMIN": "Kiểm tra thanh điện thoại",
   "form.PermissionGroup.MEMBER_PROPERTY_ADMIN": "Tất cả các chức năng trường tự lập",
   "form.PermissionGroup.MEMBER_STAR_ADMIN": "Kiểm tra các ngôi sao và các lĩnh vực khác",
@@ -1436,6 +1440,7 @@
   "form.PermissionGroup.SALES_EXPORT": "Nhập tất cả các đơn đặt hàng",
   "form.PermissionGroup.SALES_LEAD_ADMIN": "Danh sách",
   "form.PermissionGroup.SALES_LEAD_DELIVERY_ADMIN": "Danh sách chức năng phân phối",
+  "form.PermissionGroup.SALES_LEAD_NORMAL": "個人名單撥打管理功能",
   "form.PermissionGroup.SALES_LEAD_SELECTOR_ADMIN": "Liệt kê chức năng thiết bị lựa chọn quay số",
   "form.PermissionGroup.SALES_PERFORMANCE_ADMIN": "Tổng số bảng hiệu suất",
   "form.PermissionGroup.SALES_READ": "Xem tất cả các đơn đặt hàng",
@@ -1464,6 +1469,7 @@
   "form.PermissionInput.customScript": "自訂腳本",
   "form.PermissionInput.mediaLibrary": "Thư viện truyền thông",
   "form.PermissionInput.memberAdmin": "Quản lý thành viên",
+  "form.PermissionInput.memberNote": "聯絡記錄",
   "form.PermissionInput.merchandise": "Quản lý Thương mại điện tử",
   "form.PermissionInput.post": "Bài viết truyền thông",
   "form.PermissionInput.program": "Khóa học trực tuyến",
@@ -1867,9 +1873,12 @@
   "page.salesLeadDeliveryPage.deliveringMessage": "正在派發名單中，請稍等",
   "page.salesLeadDeliveryPage.deliveryConfirm": "確認派發",
   "page.salesLeadDeliveryPage.deliveryResult": "派發結果",
+  "page.salesLeadDeliveryPage.exactMatch": "完全匹配",
   "page.salesLeadDeliveryPage.expectedDeliveryAmount": "預計派發名單數",
   "page.salesLeadDeliveryPage.field": "領域",
   "page.salesLeadDeliveryPage.filterSalesLead": "篩選名單",
+  "page.salesLeadDeliveryPage.lastCalledRange": "上次撥打日期",
+  "page.salesLeadDeliveryPage.lastContactRange": "上次接通日期",
   "page.salesLeadDeliveryPage.marketingActivity": "行銷活動",
   "page.salesLeadDeliveryPage.nextStep": "下一步",
   "page.salesLeadDeliveryPage.originalManager": "原承辦人",
@@ -2544,6 +2553,7 @@
   "sale.SaleCollectionAdminCard.removeEquity": " Xóa vốn chủ sở hữu ",
   "sale.SaleCollectionAdminCard.removeEquityWarning": " Thao tác này sẽ xóa quyền sử dụng của {productName} . Bạn có chắc chắn muốn xóa không? ",
   "sale.SaleCollectionAdminCard.updateEquitySuccessfully": "Quyền và lợi ích thành công",
+  "sales.label.answeredLeads": "已接通名單",
   "sales.label.autoStartCalls": "Tự động quay số ",
   "sales.label.chaileaseApply": " Đăng ký tài trợ ",
   "sales.label.chaileaseLookup": "Đăng ký Tra cứu ",
@@ -2551,6 +2561,7 @@
   "sales.label.contactedLead": "ContactedLead ",
   "sales.label.createdAt": "Ngày thành lập",
   "sales.label.deals": "Đã giao dịch ",
+  "sales.label.followedLead": "Danh sách",
   "sales.label.idledLead": " Danh sách không liên hệ ",
   "sales.label.invitedLead": "InvitedLead ",
   "sales.label.keepInTouch": " Đang phát triển ",
@@ -2561,6 +2572,7 @@
   "sales.label.potentials": " Được phát triển ",
   "sales.label.presentedLead": "ShowedLead ",
   "sales.label.productItem": " Sản phẩm ",
+  "sales.label.recentAnsweredAt": "最近接通",
   "sales.label.recentContactedAt": "Liên hệ gần đây",
   "sales.label.recentTaskedAt": "Gần đây để làm",
   "sales.label.rejected": " Bị từ chối ",
@@ -2571,11 +2583,12 @@
   "sales.label.salesPerformance": " Tóm tắt Hiệu suất ",
   "sales.label.salesStatus": " Trạng thái Trận chiến Trực tiếp ",
   "sales.label.serviceEndedAt": " Dịch vụ đã kết thúc tại ",
+  "sales.label.signedLead": "已簽約",
   "sales.label.star": " Cấp sao ",
-  "sales.label.starredLead": "Danh sách",
   "sales.label.status": " Trạng thái ",
   "sales.label.studentName": " Tên sinh viên ",
   "sales.label.tel": "Điện thoại ",
+  "sales.label.totalLead": "全部",
   "sales.orderImportModal.description": " Nhấp vào đây để tải xuống mẫu ",
   "sales.orderImportModal.failed": " Tải lên không thành công ",
   "sales.orderImportModal.note": " Kích thước tệp tối đa 10MB",
