--- a/src/translations/locales/zh-cn.json
+++ b/src/translations/locales/zh-cn.json
@@ -543,6 +543,7 @@
   "common.label.discountDownPrice": "首期折扣",
   "common.label.draft": "草稿",
   "common.label.email": "信箱",
+  "common.label.emailForEnglish": "Email",
   "common.label.endedAt": "结束时间",
   "common.label.example": "范例",
   "common.label.exportFields": "汇出栏位",
@@ -576,6 +577,7 @@
   "common.label.keywords": "keywords",
   "common.label.languages": "显示语系",
   "common.label.lastLogin": "上次登入",
+  "common.label.leadLevel": "分級",
   "common.label.learningDuration": "学习时数",
   "common.label.learningProgress": "学习进度",
   "common.label.listPrice": "定价",
@@ -1297,6 +1299,7 @@
   "error.text.invalidURL": "无效的网址",
   "error.text.memberAlreadyExist": "会员已存在",
   "form.*.endedAt": "截止日期",
+  "form.*.loading": "讀取中",
   "form.*.startedAt": "開始日期",
   "form.GiftPlanInput.selectGiftPlan": "選擇贈品方案",
   "form.GiftPlanInput.whetherProvideGift": "是否有提供贈品",
@@ -1371,6 +1374,7 @@
   "form.PermissionGroup.MEMBER_CREATE": "添加会员",
   "form.PermissionGroup.MEMBER_EMAIL_EDIT": "编辑信箱",
   "form.PermissionGroup.MEMBER_MANAGER_ADMIN": "指派承办人功能",
+  "form.PermissionGroup.MEMBER_NOTE_ADMIN": "聯絡記錄管理功能",
   "form.PermissionGroup.MEMBER_PHONE_ADMIN": "检视电话栏位",
   "form.PermissionGroup.MEMBER_PROPERTY_ADMIN": "所有自订栏位功能",
   "form.PermissionGroup.MEMBER_STAR_ADMIN": "检视星等栏位",
@@ -1436,6 +1440,7 @@
   "form.PermissionGroup.SALES_EXPORT": "汇出所有订单",
   "form.PermissionGroup.SALES_LEAD_ADMIN": "名单拨打",
   "form.PermissionGroup.SALES_LEAD_DELIVERY_ADMIN": "名单分派功能",
+  "form.PermissionGroup.SALES_LEAD_NORMAL": "個人名單撥打管理功能",
   "form.PermissionGroup.SALES_LEAD_SELECTOR_ADMIN": "名单拨打选择器功能",
   "form.PermissionGroup.SALES_PERFORMANCE_ADMIN": "业绩总表",
   "form.PermissionGroup.SALES_READ": "查看所有订单",
@@ -1464,6 +1469,7 @@
   "form.PermissionInput.customScript": "自訂腳本",
   "form.PermissionInput.mediaLibrary": "媒体库",
   "form.PermissionInput.memberAdmin": "会员管理",
+  "form.PermissionInput.memberNote": "聯絡記錄",
   "form.PermissionInput.merchandise": "电商管理",
   "form.PermissionInput.post": "媒体文章",
   "form.PermissionInput.program": "线上课程",
@@ -1867,9 +1873,12 @@
   "page.salesLeadDeliveryPage.deliveringMessage": "正在派發名單中，請稍等",
   "page.salesLeadDeliveryPage.deliveryConfirm": "確認派發",
   "page.salesLeadDeliveryPage.deliveryResult": "派發結果",
+  "page.salesLeadDeliveryPage.exactMatch": "完全匹配",
   "page.salesLeadDeliveryPage.expectedDeliveryAmount": "預計派發名單數",
   "page.salesLeadDeliveryPage.field": "領域",
   "page.salesLeadDeliveryPage.filterSalesLead": "篩選名單",
+  "page.salesLeadDeliveryPage.lastCalledRange": "上次撥打日期",
+  "page.salesLeadDeliveryPage.lastContactRange": "上次接通日期",
   "page.salesLeadDeliveryPage.marketingActivity": "行銷活動",
   "page.salesLeadDeliveryPage.nextStep": "下一步",
   "page.salesLeadDeliveryPage.originalManager": "原承辦人",
@@ -2544,6 +2553,7 @@
   "sale.SaleCollectionAdminCard.removeEquity": "移除权益",
   "sale.SaleCollectionAdminCard.removeEquityWarning": "此操作将移除{productName}的使用权益，确定要移除吗？",
   "sale.SaleCollectionAdminCard.updateEquitySuccessfully": "权益异动成功",
+  "sales.label.answeredLeads": "已接通名單",
   "sales.label.autoStartCalls": "自动拨号",
   "sales.label.chaileaseApply": "申请资融",
   "sales.label.chaileaseLookup": "报名查询",
@@ -2551,6 +2561,7 @@
   "sales.label.contactedLead": "已联系名单",
   "sales.label.createdAt": "建立日期",
   "sales.label.deals": "已成交",
+  "sales.label.followedLead": "收藏名单",
   "sales.label.idledLead": "未联系名单",
   "sales.label.invitedLead": "已邀约名单",
   "sales.label.keepInTouch": "开发中",
@@ -2561,6 +2572,7 @@
   "sales.label.potentials": "待开发",
   "sales.label.presentedLead": "已示范名单",
   "sales.label.productItem": "产品项目",
+  "sales.label.recentAnsweredAt": "最近接通",
   "sales.label.recentContactedAt": "最近联系",
   "sales.label.recentTaskedAt": "最近待办",
   "sales.label.rejected": "已拒绝",
@@ -2571,11 +2583,12 @@
   "sales.label.salesPerformance": "业绩总表",
   "sales.label.salesStatus": "即时战况",
   "sales.label.serviceEndedAt": "服务截止时间",
+  "sales.label.signedLead": "已簽約",
   "sales.label.star": "星等",
-  "sales.label.starredLead": "收藏名单",
   "sales.label.status": "状态",
   "sales.label.studentName": "学员姓名",
   "sales.label.tel": "电话",
+  "sales.label.totalLead": "全部",
   "sales.orderImportModal.description": "点此下载范本",
   "sales.orderImportModal.failed": "上传失败",
   "sales.orderImportModal.note": "档案上限10MB",
