--- a/src/translations/locales/vi.json
+++ b/src/translations/locales/vi.json
@@ -1144,6 +1144,7 @@
   "craft.SectionSettings.layout": "Bố cục ",
   "craft.SectionSettings.left": " Left ",
   "craft.SectionSettings.link": " Liên kết ",
+  "craft.SectionSettings.none": "none",
   "craft.SectionSettings.normal": " Bình thường ",
   "craft.SectionSettings.openNewTab": " Mở tab mới ",
   "craft.SectionSettings.right": " Đúng ",
