--- a/src/translations/locales/zh-cn.json
+++ b/src/translations/locales/zh-cn.json
@@ -2055,6 +2055,7 @@
   "program.ProgramPlanAdminModal.permissionType": "選擇內容觀看權限",
   "program.ProgramPlanAdminModal.planDescription": "方案描述",
   "program.ProgramPlanAdminModal.planTitle": "方案名稱",
+  "program.ProgramPlanAdminModal.productLevel": "方案等級",
   "program.ProgramPlanAdminModal.programExpirationNotice": "課程到期通知",
   "program.ProgramPlanAdminModal.published": "發售，上架後立即開賣",
   "program.ProgramPlanAdminModal.subscriptionPeriodType": "訂閱週期",
@@ -2185,6 +2186,7 @@
   "program.ui.uploadedCaptions": "已上传字幕",
   "program.ui.videoContent": "视频内容",
   "programPackage.ProgramPackageBasicFrom.tag": "标签",
+  "programPackage.ProgramPackagePlanAdminModal.productLevel": "方案等級",
   "programPackage.ProgramPackagePlanCollectionBlock.editPlan": "編輯方案",
   "programPackage.ProgramPackagePlanCollectionBlock.sku": "SKU",
   "programPackage.ProgramPackagePlanCollectionBlock.skuSetting": "設定料號",
