feat: add more phone number

--- a/src/translations/locales/en-us.json
+++ b/src/translations/locales/en-us.json
@@ -488,6 +488,7 @@
   "common.label.activity": "Activity",
   "common.label.activityTicket": "Physical activity ticket",
   "common.label.adMaterial": "廣告素材",
+  "common.label.addPhones": "Add phone number",
   "common.label.adminBackstage": "Admin Backstage",
   "common.label.all": "All",
   "common.label.allActivityTicket": "All activities",
