--- a/src/translations/locales/id.json
+++ b/src/translations/locales/id.json
@@ -488,6 +488,7 @@
   "common.label.activity": "Aktivitas",
   "common.label.activityTicket": "Tiket aktivitas fisik",
   "common.label.adMaterial": "kreatif",
+  "common.label.addPhones": "Add phone number",
   "common.label.adminBackstage": "Admin Belakang Panggung",
   "common.label.all": "Semua",
   "common.label.allActivityTicket": "Semua aktivitas",
