--- a/src/translations/locales/vi.json
+++ b/src/translations/locales/vi.json
@@ -488,6 +488,7 @@
   "common.label.activity": " Hoạt động ",
   "common.label.activityTicket": "Phiếu hoạt động thể chất ",
   "common.label.adMaterial": "Tài liệu quảng cáo",
+  "common.label.addPhones": "Add phone number",
   "common.label.adminBackstage": "Admin Backstage",
   "common.label.all": "Tất cả",
   "common.label.allActivityTicket": "Tất cả các hoạt động",
