--- a/src/translations/locales/zh-tw.json
+++ b/src/translations/locales/zh-tw.json
@@ -488,6 +488,7 @@
   "common.label.activity": "活動",
   "common.label.activityTicket": "實體活動票券",
   "common.label.adMaterial": "廣告素材",
+  "common.label.addPhones": "新增手機",
   "common.label.adminBackstage": "管理後台",
   "common.label.all": "全部",
   "common.label.allActivityTicket": "所有活動",
