--- a/src/translations/locales/zh-cn.json
+++ b/src/translations/locales/zh-cn.json
@@ -488,6 +488,7 @@
   "common.label.activity": "活动",
   "common.label.activityTicket": "实体活动票券",
   "common.label.adMaterial": "广告素材",
+  "common.label.addPhones": "新增手機",
   "common.label.adminBackstage": "管理后台",
   "common.label.all": "全部",
   "common.label.allActivityTicket": "所有实体活动",
