--- a/src/translations/locales/zh-tw.json
+++ b/src/translations/locales/zh-tw.json
@@ -836,6 +836,7 @@
   "common.text.emailNotReceived": "收不到信？",
   "common.text.emptyNotification": "目前沒有任何通知",
   "common.text.enterRegisteredEmail": "輸入你註冊的信箱",
+  "common.text.exportMember": "已成功送出匯出請求，完成後將會將下載連結寄送到信箱。",
   "common.text.forgotPassword": "忘記密碼？",
   "common.text.locale": "當前台為指定語系時才會顯示，若不選擇全語系皆顯示",
   "common.text.memberEditable": "會員可編輯",
