feat: add meet generation method selector & query

--- a/src/translations/locales/en-us.json
+++ b/src/translations/locales/en-us.json
@@ -268,6 +268,7 @@
   "appointment.event.appointmentFailed": "Appointment Failed",
   "appointment.event.appointmentSuccessfully": "Appointment Successfully",
   "appointment.label.appointment": "Appointment",
+  "appointment.label.automaticallyGenerated": "automatically generated",
   "appointment.label.contactInformation": "Contact Information",
   "appointment.label.contactPhone": "Contact Phone",
   "appointment.label.creator": "Instructor",
@@ -277,6 +278,8 @@
   "appointment.label.hoursAgo": "Hours ago",
   "appointment.label.instructor": "Instructor",
   "appointment.label.isExisted": "Exported",
+  "appointment.label.manuallyDistributed": "manually distributed",
+  "appointment.label.meetingLink": "Meeting Link",
   "appointment.label.member": "Student",
   "appointment.label.people": "{count} {count, plural, one {person} other {people}}",
   "appointment.label.period": "Period",
@@ -2566,6 +2569,7 @@
   "sales.label.chaileaseApply": "Apply for financing",
   "sales.label.chaileaseLookup": "Sign Up Lookup",
   "sales.label.closedLead": "Closed List",
+  "sales.label.completedLead": "已完成名單",
   "sales.label.contactedLead": "ContactedLead",
   "sales.label.createdAt": "Created Date",
   "sales.label.deals": "Dealed",
