--- a/src/translations/locales/vi.json
+++ b/src/translations/locales/vi.json
@@ -268,6 +268,7 @@
   "appointment.event.appointmentFailed": "Không hẹn gặp",
   "appointment.event.appointmentSuccessfully": "Cuộc hẹn thành công",
   "appointment.label.appointment": "dự trữ",
+  "appointment.label.automaticallyGenerated": "automatically generated",
   "appointment.label.contactInformation": "Thông tin liên lạc",
   "appointment.label.contactPhone": "Liên hệ với điện thoại",
   "appointment.label.creator": "Giáo viên",
@@ -277,6 +278,8 @@
   "appointment.label.hoursAgo": "Một tiếng trước",
   "appointment.label.instructor": "giáo viên",
   "appointment.label.isExisted": "Nhiệm vụ được giao",
+  "appointment.label.manuallyDistributed": "manually distributed",
+  "appointment.label.meetingLink": "Meeting Link",
   "appointment.label.member": "sinh viên",
   "appointment.label.people": "{count} Mọi người",
   "appointment.label.period": "Giai đoạn = Stage",
@@ -2566,6 +2569,7 @@
   "sales.label.chaileaseApply": " Đăng ký tài trợ ",
   "sales.label.chaileaseLookup": "Đăng ký Tra cứu ",
   "sales.label.closedLead": " Danh sách đã đóng ",
+  "sales.label.completedLead": "已完成名單",
   "sales.label.contactedLead": "ContactedLead ",
   "sales.label.createdAt": "Ngày thành lập",
   "sales.label.deals": "Đã giao dịch ",
