--- a/src/translations/locales/id.json
+++ b/src/translations/locales/id.json
@@ -268,6 +268,7 @@
   "appointment.event.appointmentFailed": "Janji Gagal",
   "appointment.event.appointmentSuccessfully": "Janji Berhasil",
   "appointment.label.appointment": "Janji temu",
+  "appointment.label.automaticallyGenerated": "automatically generated",
   "appointment.label.contactInformation": "Informasi Kontak",
   "appointment.label.contactPhone": "Hubungi Telepon",
   "appointment.label.creator": "Instruktur",
@@ -277,6 +278,8 @@
   "appointment.label.hoursAgo": "Jam yang lalu",
   "appointment.label.instructor": "Instruktur",
   "appointment.label.isExisted": "Diekspor",
+  "appointment.label.manuallyDistributed": "manually distributed",
+  "appointment.label.meetingLink": "Meeting Link",
   "appointment.label.member": "Mahasiswa",
   "appointment.label.people": "{count} {count, plural, one {person} other {people}}",
   "appointment.label.period": "Titik",
@@ -2566,6 +2569,7 @@
   "sales.label.chaileaseApply": "Ajukan pembiayaan",
   "sales.label.chaileaseLookup": "Pencarian Daftar",
   "sales.label.closedLead": "Daftar Tertutup",
+  "sales.label.completedLead": "已完成名單",
   "sales.label.contactedLead": "ContactedLead",
   "sales.label.createdAt": "Tanggal Dibuat",
   "sales.label.deals": "Terserah",
