--- a/src/translations/locales/zh-cn.json
+++ b/src/translations/locales/zh-cn.json
@@ -268,6 +268,7 @@
   "appointment.event.appointmentFailed": "预约失败",
   "appointment.event.appointmentSuccessfully": "预约成功",
   "appointment.label.appointment": "预约",
+  "appointment.label.automaticallyGenerated": "自動產生",
   "appointment.label.contactInformation": "联络资讯",
   "appointment.label.contactPhone": "联络手机",
   "appointment.label.creator": "讲师",
@@ -277,6 +278,8 @@
   "appointment.label.hoursAgo": "小时前",
   "appointment.label.instructor": "老师",
   "appointment.label.isExisted": "已汇入",
+  "appointment.label.manuallyDistributed": "手動派發",
+  "appointment.label.meetingLink": "會議連結",
   "appointment.label.member": "学生",
   "appointment.label.people": "{count} 人",
   "appointment.label.period": "时段",
@@ -2566,6 +2569,7 @@
   "sales.label.chaileaseApply": "申请资融",
   "sales.label.chaileaseLookup": "报名查询",
   "sales.label.closedLead": "结案名单",
+  "sales.label.completedLead": "已完成名單",
   "sales.label.contactedLead": "已联系名单",
   "sales.label.createdAt": "建立日期",
   "sales.label.deals": "已成交",
