--- a/src/translations/locales/zh-tw.json
+++ b/src/translations/locales/zh-tw.json
@@ -268,6 +268,7 @@
   "appointment.event.appointmentFailed": "預約失敗",
   "appointment.event.appointmentSuccessfully": "預約成功",
   "appointment.label.appointment": "預約",
+  "appointment.label.automaticallyGenerated": "自動產生",
   "appointment.label.contactInformation": "聯絡資訊",
   "appointment.label.contactPhone": "聯絡手機",
   "appointment.label.creator": "講師",
@@ -277,6 +278,8 @@
   "appointment.label.hoursAgo": "小時前",
   "appointment.label.instructor": "老師",
   "appointment.label.isExisted": "已匯入",
+  "appointment.label.manuallyDistributed": "手動派發",
+  "appointment.label.meetingLink": "會議連結",
   "appointment.label.member": "學生",
   "appointment.label.people": "{count} 人",
   "appointment.label.period": "時段",
@@ -2570,6 +2573,7 @@
   "sales.label.chaileaseApply": "申請資融",
   "sales.label.chaileaseLookup": "報名查詢",
   "sales.label.closedLead": "結案名單",
+  "sales.label.completedLead": "已完成名單",
   "sales.label.contactedLead": "已聯繫名單",
   "sales.label.createdAt": "建立日期",
   "sales.label.deals": "已成交",
