feat: add meeting capacity limit

--- a/src/translations/locales/id.json
+++ b/src/translations/locales/id.json
@@ -278,7 +278,9 @@
   "appointment.label.hoursAgo": "Jam yang lalu",
   "appointment.label.instructor": "Instruktur",
   "appointment.label.isExisted": "Diekspor",
+  "appointment.label.limited": "limited",
   "appointment.label.manuallyDistributed": "manually distributed",
+  "appointment.label.maximumCapacity": "Maximum Capacity",
   "appointment.label.meetingLink": "Meeting Link",
   "appointment.label.member": "Mahasiswa",
   "appointment.label.people": "{count} {count, plural, one {person} other {people}}",
@@ -300,6 +302,7 @@
   "appointment.label.singlePeriod": "titik",
   "appointment.label.startedAt": "StartedAt",
   "appointment.label.status": "Status",
+  "appointment.label.unlimited": "unlimited",
   "appointment.status.aboutToStart": "About to start",
   "appointment.status.available": "Tersedia",
   "appointment.status.canceled": "Dibatalkan",
