--- a/src/translations/locales/vi.json
+++ b/src/translations/locales/vi.json
@@ -278,7 +278,9 @@
   "appointment.label.hoursAgo": "Một tiếng trước",
   "appointment.label.instructor": "giáo viên",
   "appointment.label.isExisted": "Nhiệm vụ được giao",
+  "appointment.label.limited": "limited",
   "appointment.label.manuallyDistributed": "manually distributed",
+  "appointment.label.maximumCapacity": "Maximum Capacity",
   "appointment.label.meetingLink": "Meeting Link",
   "appointment.label.member": "sinh viên",
   "appointment.label.people": "{count} Mọi người",
@@ -300,6 +302,7 @@
   "appointment.label.singlePeriod": "Giai đoạn = Stage",
   "appointment.label.startedAt": "Thời gian bắt đầu",
   "appointment.label.status": "tiểu bang",
+  "appointment.label.unlimited": "unlimited",
   "appointment.status.aboutToStart": "Sẽ được tổ chức sớm hơn",
   "appointment.status.available": "Cuộc hẹn",
   "appointment.status.canceled": "Bị hủy bỏ",
