--- a/src/translations/locales/zh-tw.json
+++ b/src/translations/locales/zh-tw.json
@@ -278,7 +278,9 @@
   "appointment.label.hoursAgo": "小時前",
   "appointment.label.instructor": "老師",
   "appointment.label.isExisted": "已匯入",
+  "appointment.label.limited": "限制人數",
   "appointment.label.manuallyDistributed": "手動派發",
+  "appointment.label.maximumCapacity": "單場人數上限",
   "appointment.label.meetingLink": "會議連結",
   "appointment.label.member": "學生",
   "appointment.label.people": "{count} 人",
@@ -300,6 +302,7 @@
   "appointment.label.singlePeriod": "時段",
   "appointment.label.startedAt": "起始時間",
   "appointment.label.status": "狀態",
+  "appointment.label.unlimited": "不設限",
   "appointment.status.aboutToStart": "即將舉行",
   "appointment.status.available": "可預約",
   "appointment.status.canceled": "已取消",
