--- a/src/translations/locales/en-us.json
+++ b/src/translations/locales/en-us.json
@@ -278,7 +278,9 @@
   "appointment.label.hoursAgo": "Hours ago",
   "appointment.label.instructor": "Instructor",
   "appointment.label.isExisted": "Exported",
+  "appointment.label.limited": "limited",
   "appointment.label.manuallyDistributed": "manually distributed",
+  "appointment.label.maximumCapacity": "Maximum Capacity",
   "appointment.label.meetingLink": "Meeting Link",
   "appointment.label.member": "Student",
   "appointment.label.people": "{count} {count, plural, one {person} other {people}}",
@@ -300,6 +302,7 @@
   "appointment.label.singlePeriod": "period",
   "appointment.label.startedAt": "StartedAt",
   "appointment.label.status": "Status",
+  "appointment.label.unlimited": "unlimited",
   "appointment.status.aboutToStart": "About to start",
   "appointment.status.available": "Available",
   "appointment.status.canceled": "Canceled",
