--- a/src/translations/locales/zh-cn.json
+++ b/src/translations/locales/zh-cn.json
@@ -278,7 +278,9 @@
   "appointment.label.hoursAgo": "小时前",
   "appointment.label.instructor": "老师",
   "appointment.label.isExisted": "已汇入",
+  "appointment.label.limited": "限制人數",
   "appointment.label.manuallyDistributed": "手動派發",
+  "appointment.label.maximumCapacity": "單場人數上限",
   "appointment.label.meetingLink": "會議連結",
   "appointment.label.member": "学生",
   "appointment.label.people": "{count} 人",
@@ -300,6 +302,7 @@
   "appointment.label.singlePeriod": "时段",
   "appointment.label.startedAt": "起始时间",
   "appointment.label.status": "状态",
+  "appointment.label.unlimited": "不設限",
   "appointment.status.aboutToStart": "即将举行",
   "appointment.status.available": "可预约",
   "appointment.status.canceled": "已取消",
