feat: manually generate meeting link

--- a/src/translations/locales/en-us.json
+++ b/src/translations/locales/en-us.json
@@ -265,6 +265,7 @@
   "appointment.AppointmentPeriodCard.appointmentText": "{name} 已預約你的「{title}」",
   "appointment.AppointmentPeriodCard.cancelAppointment": "取消預約",
   "appointment.AppointmentPeriodCard.joinMeeting": "進入會議",
+  "appointment.AppointmentPeriodCard.notYetConfigured": "not yet configured",
   "appointment.event.appointmentFailed": "Appointment Failed",
   "appointment.event.appointmentSuccessfully": "Appointment Successfully",
   "appointment.label.appointment": "Appointment",
@@ -341,12 +342,14 @@
   "appointment.ui.open": "Open",
   "appointment.ui.single": "Single",
   "appointment.warning.repetitiveMeta": "※ repeat period",
+  "appointmentMessages.*.appointmentConfigureMeetingRoom": "Configure a meeting room",
   "appointmentMessages.*.appointmentIssueAndResult": "提問紀錄單",
   "appointmentMessages.*.detail": "詳情",
   "appointmentMessages.*.fetchDataError": "讀取錯誤",
   "appointmentMessages.AppointmentCancelModal.canceledReason": "取消原因",
   "appointmentMessages.AppointmentCancelModal.confirmCancelAlert": "確定要取消預約嗎？",
   "appointmentMessages.AppointmentCancelModal.confirmCancelNotation": "取消預約後將會寄送通知給諮詢老師，並重新開放此時段，若需退費請主動聯繫平台。",
+  "appointmentMessages.AppointmentCancelModal.meetingLink": "meeting link",
   "appointmentMessages.AppointmentDetailModal.canceledReason": "取消原因",
   "appointmentMessages.AppointmentDetailModal.email": "信箱",
   "appointmentMessages.AppointmentDetailModal.orderUpdatedTime": "訂單更新日期",
