--- a/src/translations/locales/id.json
+++ b/src/translations/locales/id.json
@@ -265,6 +265,7 @@
   "appointment.AppointmentPeriodCard.appointmentText": "{name} telah memesan '{title}' Anda",
   "appointment.AppointmentPeriodCard.cancelAppointment": "取消預約",
   "appointment.AppointmentPeriodCard.joinMeeting": "Gabung Rapat",
+  "appointment.AppointmentPeriodCard.notYetConfigured": "not yet configured",
   "appointment.event.appointmentFailed": "Janji Gagal",
   "appointment.event.appointmentSuccessfully": "Janji Berhasil",
   "appointment.label.appointment": "Janji temu",
@@ -341,12 +342,14 @@
   "appointment.ui.open": "Buka",
   "appointment.ui.single": "Lajang",
   "appointment.warning.repetitiveMeta": "periode pengulangan",
+  "appointmentMessages.*.appointmentConfigureMeetingRoom": "Configure a meeting room",
   "appointmentMessages.*.appointmentIssueAndResult": "Tanya Catatan",
   "appointmentMessages.*.detail": "Rincian",
   "appointmentMessages.*.fetchDataError": "Kesalahan Baca",
   "appointmentMessages.AppointmentCancelModal.canceledReason": "取消原因",
   "appointmentMessages.AppointmentCancelModal.confirmCancelAlert": "確定要取消預約嗎？",
   "appointmentMessages.AppointmentCancelModal.confirmCancelNotation": "取消預約後將會寄送通知給諮詢老師，並重新開放此時段，若需退費請主動聯繫平台。",
+  "appointmentMessages.AppointmentCancelModal.meetingLink": "meeting link",
   "appointmentMessages.AppointmentDetailModal.canceledReason": "Alasan Pembatalan",
   "appointmentMessages.AppointmentDetailModal.email": "Kotak Surat",
   "appointmentMessages.AppointmentDetailModal.orderUpdatedTime": "Tanggal Pembaruan Pesanan",
