--- a/src/translations/locales/vi.json
+++ b/src/translations/locales/vi.json
@@ -265,6 +265,7 @@
   "appointment.AppointmentPeriodCard.appointmentText": "{name} Bạn đã nộp đơn cho bạn'{title}'",
   "appointment.AppointmentPeriodCard.cancelAppointment": "取消預約",
   "appointment.AppointmentPeriodCard.joinMeeting": "Vào cuộc họp",
+  "appointment.AppointmentPeriodCard.notYetConfigured": "not yet configured",
   "appointment.event.appointmentFailed": "Không hẹn gặp",
   "appointment.event.appointmentSuccessfully": "Cuộc hẹn thành công",
   "appointment.label.appointment": "dự trữ",
@@ -341,12 +342,14 @@
   "appointment.ui.open": "Mở",
   "appointment.ui.single": "Độc thân",
   "appointment.warning.repetitiveMeta": "※ Chu kỳ trùng lặp là",
+  "appointmentMessages.*.appointmentConfigureMeetingRoom": "Configure a meeting room",
   "appointmentMessages.*.appointmentIssueAndResult": "Danh sách hồ sơ câu hỏi",
   "appointmentMessages.*.detail": "Chi tiết",
   "appointmentMessages.*.fetchDataError": "Đọc lỗi",
   "appointmentMessages.AppointmentCancelModal.canceledReason": "取消原因",
   "appointmentMessages.AppointmentCancelModal.confirmCancelAlert": "確定要取消預約嗎？",
   "appointmentMessages.AppointmentCancelModal.confirmCancelNotation": "取消預約後將會寄送通知給諮詢老師，並重新開放此時段，若需退費請主動聯繫平台。",
+  "appointmentMessages.AppointmentCancelModal.meetingLink": "meeting link",
   "appointmentMessages.AppointmentDetailModal.canceledReason": "Lý do hủy bỏ",
   "appointmentMessages.AppointmentDetailModal.email": "hộp thư",
   "appointmentMessages.AppointmentDetailModal.orderUpdatedTime": "Ngày cập nhật ngày",
