--- a/src/translations/locales/zh-cn.json
+++ b/src/translations/locales/zh-cn.json
@@ -265,6 +265,7 @@
   "appointment.AppointmentPeriodCard.appointmentText": "{name} 已预约你的「{title}」",
   "appointment.AppointmentPeriodCard.cancelAppointment": "取消預約",
   "appointment.AppointmentPeriodCard.joinMeeting": "进入会议",
+  "appointment.AppointmentPeriodCard.notYetConfigured": "not yet configured",
   "appointment.event.appointmentFailed": "预约失败",
   "appointment.event.appointmentSuccessfully": "预约成功",
   "appointment.label.appointment": "预约",
@@ -341,12 +342,14 @@
   "appointment.ui.open": "开启",
   "appointment.ui.single": "单一",
   "appointment.warning.repetitiveMeta": "※重复周期为",
+  "appointmentMessages.*.appointmentConfigureMeetingRoom": "Configure a meeting room",
   "appointmentMessages.*.appointmentIssueAndResult": "提问纪录单",
   "appointmentMessages.*.detail": "详情",
   "appointmentMessages.*.fetchDataError": "读取错误",
   "appointmentMessages.AppointmentCancelModal.canceledReason": "取消原因",
   "appointmentMessages.AppointmentCancelModal.confirmCancelAlert": "確定要取消預約嗎？",
   "appointmentMessages.AppointmentCancelModal.confirmCancelNotation": "取消預約後將會寄送通知給諮詢老師，並重新開放此時段，若需退費請主動聯繫平台。",
+  "appointmentMessages.AppointmentCancelModal.meetingLink": "meeting link",
   "appointmentMessages.AppointmentDetailModal.canceledReason": "取消原因",
   "appointmentMessages.AppointmentDetailModal.email": "信箱",
   "appointmentMessages.AppointmentDetailModal.orderUpdatedTime": "订单更新日期",
