--- a/src/translations/locales/zh-tw.json
+++ b/src/translations/locales/zh-tw.json
@@ -265,6 +265,7 @@
   "appointment.AppointmentPeriodCard.appointmentText": "{name} 已預約你的「{title}」",
   "appointment.AppointmentPeriodCard.cancelAppointment": "取消預約",
   "appointment.AppointmentPeriodCard.joinMeeting": "進入會議",
+  "appointment.AppointmentPeriodCard.notYetConfigured": "尚未設定",
   "appointment.event.appointmentFailed": "預約失敗",
   "appointment.event.appointmentSuccessfully": "預約成功",
   "appointment.label.appointment": "預約",
@@ -341,12 +342,14 @@
   "appointment.ui.open": "開啟",
   "appointment.ui.single": "單一",
   "appointment.warning.repetitiveMeta": "※重複週期為",
+  "appointmentMessages.*.appointmentConfigureMeetingRoom": "設定會議室",
   "appointmentMessages.*.appointmentIssueAndResult": "提問紀錄單",
   "appointmentMessages.*.detail": "詳情",
   "appointmentMessages.*.fetchDataError": "讀取錯誤",
   "appointmentMessages.AppointmentCancelModal.canceledReason": "取消原因",
   "appointmentMessages.AppointmentCancelModal.confirmCancelAlert": "確定要取消預約嗎？",
   "appointmentMessages.AppointmentCancelModal.confirmCancelNotation": "取消預約後將會寄送通知給諮詢老師，並重新開放此時段，若需退費請主動聯繫平台。",
+  "appointmentMessages.AppointmentCancelModal.meetingLink": "會議連結",
   "appointmentMessages.AppointmentDetailModal.canceledReason": "取消原因",
   "appointmentMessages.AppointmentDetailModal.email": "信箱",
   "appointmentMessages.AppointmentDetailModal.orderUpdatedTime": "訂單更新日期",
