feat: add new filter option

--- a/src/translations/locales/id.json
+++ b/src/translations/locales/id.json
@@ -1492,6 +1492,10 @@
   "form.PermissionInput.salesManagement": "Manajemen Bisnis",
   "form.PermissionInput.task": "Manajemen Tugas",
   "form.PermissionInput.voucher": "Skema Pertukaran",
+  "form.ProductSelector.customizedPhysicalMerchandiseSpec": "客製實體商品規格",
+  "form.ProductSelector.customizedVirtualMerchandiseSpec": "客製虛擬商品規格",
+  "form.ProductSelector.generalPhysicalMerchandiseSpec": "一般實體商品規格",
+  "form.ProductSelector.generalVirtualMerchandiseSpec": "一般虛擬商品規格",
   "giftPlan.GiftPlanCollectionAdminModal.customGiftNameIsRequired": "贈品項目名稱為必填",
   "giftPlan.GiftPlanCollectionAdminModal.editGiftPlan": "編輯贈品方案",
   "giftPlan.GiftPlanCollectionAdminModal.giftCover": "贈品封面",
@@ -1878,6 +1882,8 @@
   "page.VoucherPlanCollectionBlock.showMore": "顯示更多",
   "page.salesLeadDeliveryPage.adMaterials": "廣告素材",
   "page.salesLeadDeliveryPage.assignedAtRange": "名單派發日期",
+  "page.salesLeadDeliveryPage.closedAtIsNull": "exclude the closed ones",
+  "page.salesLeadDeliveryPage.completedAtIsNull": "exclude the completed ones",
   "page.salesLeadDeliveryPage.createdAtRange": "名單建立日期",
   "page.salesLeadDeliveryPage.deliverAgain": "再次派發",
   "page.salesLeadDeliveryPage.deliverFailed": "名單派發失敗",
